# edc_system

./: Makefile  README.md  dev-entrypoint.sh  pyproject.toml
src/edc_system/api/v1/: main.py
src/edc_system/api/v1/auth/: routes.py
src/edc_system/api/v1/middlewares/: auth_middleware.py
src/edc_system/domain/entities/: base.py  filemetadata.py  user.py
