[project]
name = "edc_system"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ilya-4real", email = "ilya.chernishyov@gmail.com"},
]
dependencies = [
    "litestar[standard]>=2.10.0",
    "punq>=0.7.0",
    "pydantic-settings>=2.4.0",
    "cryptography>=43.0.0",
    "pyjwt[crypto]>=2.9.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
